<resources>
    <string name="app_name">LSAT Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_goals">GoalsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="recommended_study_text">Note: We recommend 150–300 hours of study time over a period of 3-6 months.</string>
    <string name="reset_button_text">Reset</string>
    <string name="score_min_text">120</string>
    <string name="score_max_text">180</string>
    <string name="intro_paragraph_text">Preparing for the LSAT is a difficult task for many potential law students. We help you to track your study time and LSAT scores, both practice and actual so you can make more informed decisions regarding the use of your study time. Best of luck to you!</string>
    <string name="name_edit_hint">Enter Your Name</string>
    <string name="continue_button_text">CONTINUE</string>
    <string name="enter_button_text">Enter</string>
    <string name="add_lsat_score_button_text">Add LSAT Score</string>
    <string name="lsat_score_text">LSAT Score</string>
    <string name="date_taken_text">Date Taken</string>
    <string name="add_lsat_score_text">Add Score</string>
    <string name="practice_test_text">Practice Test</string>
    <string name="actual_test_text">Actual Test</string>
    <string name="start_goals_activity_text">LSAT Goals</string>
    <string name="start_lsat_scores_activity_text">LSAT Scores</string>
    <string name="start_hours_studied_activity_text">Hours Studied</string>
    <string name="hours_studied_text">Hours Studied:</string>
    <string name="add_hours_text">Add Hours</string>
    <string name="subtract_study_hours_text">Subtract Hours</string>
    <string name="welcome_message_text">Welcome to LSAT Tracker</string>
    <string name="score_goal_hint">Score Goal (120-180)</string>
    <string name="study_hours_goal_hint">Study Hours Goal</string>
    <string name="test_date_hint">Test Date</string>
    <string name="study_goal_set_text">You have not set a study goal yet. Please navigate to the goals page and set one.</string>
    <string name="study_goal_set_text_2">\"Your study goal in hours is: \"</string>
    <string name="goals_title_text">LSAT Goals</string>
    <string name="scores_title_text">LSAT Scores</string>
    <string name="study_hours_title_text">Hours Studied</string>
    <string name="score_title_text">Score:</string>
</resources>