<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal"
    tools:context=".activities.SplashActivity">

    <TextView
        android:id="@+id/textview_welcome_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/welcome_message_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline1" />

    <TextView
        android:id="@+id/textview_app_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/intro_paragraph_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintDimensionRatio="1.3:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline3" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/name_edit_hint"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline2" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="@string/continue_button_text"
        android:textSize="25sp"
        app:backgroundTint="#4D000000"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />
</androidx.constraintlayout.widget.ConstraintLayout>