<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal">

    <TextView
        android:id="@+id/goals_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/goals_title_text"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:cardBackgroundColor="#4D000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edittext_score_goal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/score_goal_hint"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintDimensionRatio="5:1"
                app:layout_constraintTop_toBottomOf="@id/cardview_horizontal_guideline1"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintEnd_toEndOf="@id/cardview_guideline3"/>


            <EditText
                android:id="@+id/edittext_study_hours_goal"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/study_hours_goal_hint"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintDimensionRatio="5:1"
                app:layout_constraintTop_toBottomOf="@id/cardview_horizontal_guideline2"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintEnd_toEndOf="@id/cardview_guideline3"/>


            <TextView
                android:id="@+id/textview_recommended_study_hours"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:text="@string/recommended_study_text"
                android:textColor="#80FFFDFD"
                android:textSize="15sp"
                app:layout_constraintDimensionRatio="4:1"
                app:layout_constraintTop_toBottomOf="@id/cardview_horizontal_guideline3"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintEnd_toEndOf="@id/cardview_guideline3"/>

            <EditText
                android:id="@+id/edittext_test_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="@string/test_date_hint"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintDimensionRatio="5:1"
                app:layout_constraintTop_toBottomOf="@id/cardview_horizontal_guideline4"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintEnd_toEndOf="@id/cardview_guideline3"/>

            <TextView
                android:id="@+id/textview_required_study_hours_per_day"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="1.5:1"
                app:layout_constraintEnd_toStartOf="@+id/cardview_guideline4"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintTop_toBottomOf="@id/cardview_horizontal_guideline5" />

            <Button
                android:id="@+id/button_enter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:text="@string/enter_button_text"
                app:backgroundTint="#9F223843"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintTop_toBottomOf="@id/textview_required_study_hours_per_day"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline1"
                app:layout_constraintEnd_toEndOf="@id/cardview_guideline2"/>

            <Button
                android:id="@+id/button_reset"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:text="@string/reset_button_text"
                app:backgroundTint="#9F223843"
                app:layout_constraintDimensionRatio="3:1"
                app:layout_constraintEnd_toStartOf="@+id/cardview_guideline4"
                app:layout_constraintStart_toStartOf="@id/cardview_guideline2"
                app:layout_constraintTop_toBottomOf="@id/textview_required_study_hours_per_day" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".05" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_guideline3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="250dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_guideline4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_horizontal_guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_horizontal_guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_horizontal_guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_horizontal_guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".38" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardview_horizontal_guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".48" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>