<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/study_hours_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gunmetal">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textview_user_study_goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textview_user_study_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_user_study_goal_description" />

    <ProgressBar
        android:id="@+id/progressbar_score"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_user_study_goal"
        tools:progress="0" />

    <TextView
        android:id="@+id/textview_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressbar_score"
        app:layout_constraintEnd_toEndOf="@+id/progressbar_score"
        app:layout_constraintStart_toStartOf="@+id/progressbar_score"
        app:layout_constraintTop_toTopOf="@+id/progressbar_score" />

    <TextView
        android:id="@+id/textview_hours_studied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/hours_studied_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar_score" />

    <EditText
        android:id="@+id/edittext_hours_studied"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_hours_studied" />

    <Button
        android:id="@+id/button_add_study_hours"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4D000000"
        android:text="@string/add_hours_text"
        app:layout_constraintEnd_toStartOf="@+id/button_subtract_study_hours"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_hours_studied" />

    <Button
        android:id="@+id/button_subtract_study_hours"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:paddingRight="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#4D000000"
        android:text="@string/subtract_study_hours_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_add_study_hours"
        app:layout_constraintTop_toBottomOf="@+id/edittext_hours_studied" />


</androidx.constraintlayout.widget.ConstraintLayout>